; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_benchlib.c_interlocked_dec_with_conditionals.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_benchlib.c_interlocked_dec_with_conditionals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @interlocked_dec_with_conditionals(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %13

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = bitcast i32* %6 to i64*
  %8 = call i32 @InterlockedDecrement(i64* %7)
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %12

10:                                               ; preds = %5
  %11 = load i32*, i32** %2, align 8
  store i32 0, i32* %11, align 4
  br label %12

12:                                               ; preds = %10, %5
  br label %13

13:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @InterlockedDecrement(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
